...
            ))}
          </View>
        </ScrollView>

        <View className="py-6 pb-10">
           <TouchableOpacity
            testID="onboarding-next-3"
            onPress={onNext}
            disabled={!goal}
          >
            <LinearGradient
              colors={[Colors[colorScheme ?? 'light'].primary, Colors[colorScheme ?? 'light'].primaryDark]}
              className={`rounded-xl p-4 items-center ${(!goal) ? 'opacity-50' : ''}`}
...
